--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.14",
     "@types/node": "^16.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "axios": "^0.21.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-newlines": "^1.2.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
