--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./index.ts",
+    "build": "tsc",
+    "build:typecheck": "tsc --noEmit",
+    "db:migrate": "knex migrate:latest",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn src/index.ts",
+    "lint:fix": "eslint --fix",
     "send": "ts-node ./send-events.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .build/src/index.js",
+    "test": "jest",
+    "test:coverage": "NODE_ENV=test jest --runInBand --coverage",
+    "test:watch": "jest --runInBand --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^2.3.0",
+    "pg": "^8.8.0",
+    "ts-node-dev": "^1.1.8",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -20,11 +32,12 @@
     "@types/node": "^16.4.6",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "axios": "^0.21.1",
+    "dotenv": "^16.0.2",
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-newlines": "^1.2.3",
     "ts-node": "^10.1.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.3.5"
   }
 }
