feat: added connection to db, run migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,25 @@ services:
       dockerfile: "Dockerfile"
     ports:
       - "3001:3001"
-    env_file:
-      - ./.env
     volumes:
       - "./:/usr/app"
     depends_on:
       - logixboard-db
+    networks:
+      - logixboard_backend
   logixboard-db:
     image: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: logixboard_db
-      POSTGRES_HOST: db
+      POSTGRES_HOST: localhost
       POSTGRES_PORT: 5432
     ports:
-      - "5432:5432"
+      - "5454:5432"
+    networks:
+      - logixboard_backend
+networks:
+  logixboard_backend:
+    driver:
+      bridge
