--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.14.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "^2.0.0",
     "winston": "^3.6.0"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-newlines": "^1.2.3",
-    "ts-node": "^10.1.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.3.5"
   }
